# RAGineer

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: .gitignore
docker/: docker-compose.yaml
src/: main.py
src/agent/tools/: search_tools.py
src/api/routes/V1/: agent_router.py  data_router.py  users_router.py
src/api/schemas/: data_schemas.py  users_api_schemas.py
src/controllers/: base_controller.py  data_controller.py  process_controller.py  users_controller.py
src/core/: config.py
src/core/enums/: db_enums.py
src/integrations/db/models/: base_model.py  files.py  text_chunks.py  users.py
src/integrations/db/schemas/: file.py  text_chunk.py  user.py
src/integrations/vectordb/: vectorDB_enums.py  vectorDB_factory.py  vectorDB_interface.py
src/integrations/vectordb/providers/: Qdrant.py  __init__.py
